# setup_hybrid_project

./: .gitignore  meson.build  meson_options.txt  pyproject.toml  readme.rst  setup.py
c_wrap/: meson.build
c_wrap/include/: c_custom_pack.h
c_wrap/src/: c_custom_pack.cpp
cpp_sector/: meson.build
cpp_sector/include/: custom_pack.h
cpp_sector/src/: custom_pack.cpp
python_sector/: cwrap-fb0.py.in  cwrap-fb1.py.in  meson.build
python_sector/custpy/: __init__.py  cust.py
