[build-system]
requires = ["mesonpep517"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author = "Tommaso Ronconi"
author-email = "tronconi@sissa.it"
description = "An example of hybrid C++/C/Python library installed with Meson BS"
description-file = "readme.rst"
# repository = "https://github.com/TommasoRonconi/setup_hybrid_project"
summary = "If this works I'm happy"

classifiers = [
	      "Operating System :: POSIX",
	      "Programming Language :: C++",
	      "Programming Language :: C",
	      "Programming Language :: Python :: 3",
	      "Topic :: Utilities",
	      #"Topic :: Scientific/Engineering :: Astronomy",
	      #"Topic :: Scientific/Engineering :: Physics",
	    ]

module = "custpy"

# requires = [ "numpy", "gsl>2", ]
requires-python = ">=3.6"

meson-options = [ "-Dfull-build=false" ]
